Fixed a bug where top display would overflow when equation get big

--- a/src/styles/components/CalculatorIO.scss
+++ b/src/styles/components/CalculatorIO.scss
@@ -15,13 +15,18 @@
 
   .display {
     cursor: text;
+    overflow: hidden;
 
     .top-display {
       padding: 0;
       margin: 0;
       min-height: 1.5em;
+
       font-weight: bold;
       word-break: break-all;
+
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .interaction {
